# ML_Ops_NG

./: .dockerignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml  cd.yaml
dags/: cars_predict_dag.py  cars_retraining_dag.py  cars_training_dag.py
docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.frontend  Dockerfile.mlflow  Dockerfile.train
frontend/: app.py
models/: metrics.csv
notebooks/: training_experiments.ipynb
scripts/: share_urls.ps1
src/: __init__.py  api.py  config.py  data.py  evaluate.py  evaluation.py  features.py  script.py  tracking.py  train.py  train_models.py  train_optuna.py
src/mlproject/: config.py  data.py  features.py
tests/: test_api.py  test_features.py  test_script.py
