[project]
name = "cars"
version = "0.1.0"
description = "Projet MLOps de classification binaire applique a l'industrie automobile."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "joblib>=1.4.2",
    "lightgbm>=4.5.0",
    "matplotlib>=3.9.0",
    "mlflow>=2.17.0",
    "numpy>=2.1.0",
    "optuna>=4.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.0",
    "shap>=0.46.0",
    "streamlit>=1.39.0",
    "uvicorn>=0.32.0",
    "xgboost>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.12.0",
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
